# vkgrad

./: Cargo.toml  README.md
docs/: ai.xcf  error-derivation.typ  update_pdf.sh
scripts/: gflops_calc.py
vkgrad-core/: Cargo.toml
vkgrad-core/benches/: matmul.rs
vkgrad-core/examples/: vk_matmul.rs
vkgrad-core/src/: lib.rs
vkgrad-core/src/bits/: mod.rs
vkgrad-core/src/device/: cpu.rs  mod.rs
vkgrad-core/src/device/vk/: gemm.comp  gemm.rs  mod.rs
vkgrad-core/src/tensors/: dimensions.rs  dtype.rs  mod.rs  owned.rs  views.rs
