[package]
name = "vkgrad-core"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.23.1", features = ["extern_crate_alloc"] }
log = "0.4.27"
ndarray = { version = "0.16.1" }
smallvec = "1.15.1"
thiserror = "2.0.12"
vulkano = "0.35.1"
vulkano-shaders = "0.35.0"

[dev-dependencies]
ndarray = { version = "0.16.1", features = ["approx", "blas"] }
criterion = { version = "0.6.0", features = ["html_reports"] }
ndarray-rand = "0.15.0"
blas-src = { version = "0.10", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
anyhow = "1.0.98"
env_logger = "0.11.8"
ndarray-stats = "0.6.0"
approx = "0.5.1"
statrs = "0.18.0"

[[bench]]
name = "matmul"
harness = false
